@startuml

title __SOUND's Class Diagram__\n

 namespace sound {
      enum Sound {
        BLUE_PORTAL_SOUND
        CREDIT
        DEATH
        EATEN_SOUND
        EAT_FRUIT
        EAT_GHOST
        FRIGHT_SOUND
        GAME_START
        MUNCH_1
        MUNCH_2
        PAUSE_SOUND
        RED_PORTAL_SOUND
        SIREN_1
        SIREN_2
        SIREN_3
        SIREN_4
        SIREN_5
        STARTUP
      }

      class sound.SoundClip {
          - ais : AudioInputStream
          - clip : Clip
          + SoundClip()
          + getAis()
          + getClip()
          + getName()
          + setAis()
          + setClip()
          + setName()
      }
      class sound.SoundFactory {
          + chooseSound()
          + loopSound()
          + playSound()
          + stopSound()
          - createStream()
      }
      class sound.SoundPlayer {
          {static} - muteEffects : boolean
          {static} - muteMusic : boolean
          {static} + initialize()
          {static} + isMuteEffects()
          {static} + isMuteMusic()
          {static} + loopEffect()
          {static} + playEffect()
          {static} + playMusic()
          {static} + removeMusic()
          {static} + setMuteEffects()
          {static} + setMuteMusic()
          {static} + stopAll()
          {static} + stopMusic()
          {static} - isPlaying()
      }
    }
  

  sound.SoundClip o-- sound.Sound : name
  sound.SoundPlayer o-- sound.SoundClip : library
  sound.SoundPlayer o-- sound.SoundFactory : sf

@enduml
